[Chromoting] Add DescendingSamples and use it in scheduler
Bug:
Change-Id: I78a8afc1c7b2a543d6889887bf52fdd7b355395c

--- a/remoting/protocol/BUILD.gn
+++ b/remoting/protocol/BUILD.gn
@@ -137,6 +137,8 @@ static_library("protocol") {
     "pseudotcp_adapter.h",
     "pseudotcp_channel_factory.cc",
     "pseudotcp_channel_factory.h",
+    "reliable_bandwidth_estimator.cc",
+    "reliable_bandwidth_estimator.h",
     "rejecting_authenticator.cc",
     "rejecting_authenticator.h",
     "sdp_message.cc",
