Added web::WKCookieStoreForBrowserState helper.
This function will be used in New Download API and can also be used for
SystemCookieStore creation.

Bug: None
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I5f85c59a6e759f226b01937e598db866273f1838

--- a/ios/web/net/BUILD.gn
+++ b/ios/web/net/BUILD.gn
@@ -12,6 +12,7 @@ source_set("net") {
     "//ios/web/navigation:core",
     "//ios/web/public",
     "//ios/web/web_state:wk_web_view_security_util",
+    "//ios/web/web_state/ui:wk_web_view_configuration_provider",
     "//net",
   ]
 
@@ -34,6 +35,8 @@ source_set("net") {
     "request_tracker_impl.mm",
     "web_http_protocol_handler_delegate.h",
     "web_http_protocol_handler_delegate.mm",
+    "wk_cookie_util.h",
+    "wk_cookie_util.mm",
   ]
 
   configs += [ "//build/config/compiler:enable_arc" ]
