--- a/ios/web/BUILD.gn
+++ b/ios/web/BUILD.gn
@@ -293,6 +293,7 @@ source_set("ios_web_net_unittests") {
     "net/request_group_util_unittest.mm",
     "net/request_tracker_impl_unittest.mm",
     "net/web_http_protocol_handler_delegate_unittest.mm",
+    "net/wk_cookie_util_unittest.mm",
   ]
 }
 
