[ios] Removes IDC_CLEAR_BROWSING_DATA
Bug:
Change-Id: Ic07fa92376582f1d6950f53b3d67da38f098f308

--- a/ios/chrome/browser/browsing_data/BUILD.gn
+++ b/ios/chrome/browser/browsing_data/BUILD.gn
@@ -102,9 +102,10 @@ source_set("browsing_data_internal") {
     "//ios/chrome/browser/signin",
     "//ios/chrome/browser/snapshots",
     "//ios/chrome/browser/tabs",
-    "//ios/chrome/browser/ui:ui_internal",
     "//ios/web",
     "//net",
+    "//ui/gfx",
   ]
+  allow_circular_includes_from = [ "//ios/chrome/browser/signin" ]
   libs = [ "WebKit.framework" ]
 }
