Add optimization hints component installer which dispatches hints to a dummy optimization guide service
The registration of the component is guarded by a feature flag and data saver being enabled for the current profile.

Bug:77892
Change-Id: I5f4c5e8bd9e06a19c8776600b24a1f13b974a116

--- a/chrome/browser/BUILD.gn
+++ b/chrome/browser/BUILD.gn
@@ -269,6 +269,8 @@ split_static_library("browser") {
     "component_updater/crl_set_component_installer.h",
     "component_updater/file_type_policies_component_installer.cc",
     "component_updater/file_type_policies_component_installer.h",
+    "component_updater/optimization_hints_component_installer.cc",
+    "component_updater/optimization_hints_component_installer.h",
     "component_updater/origin_trials_component_installer.cc",
     "component_updater/origin_trials_component_installer.h",
     "component_updater/pnacl_component_installer.cc",
@@ -852,6 +854,10 @@ split_static_library("browser") {
     "ntp_tiles/chrome_popular_sites_factory.h",
     "offline_items_collection/offline_content_aggregator_factory.cc",
     "offline_items_collection/offline_content_aggregator_factory.h",
+    "optimization_guide/optimization_guide_constants.cc",
+    "optimization_guide/optimization_guide_constants.h",
+    "optimization_guide/optimization_guide_service.cc",
+    "optimization_guide/optimization_guide_service.h",
     "page_load_metrics/browser_page_track_decider.cc",
     "page_load_metrics/browser_page_track_decider.h",
     "page_load_metrics/experiments/delay_navigation_throttle.cc",
