--- a/gpu/BUILD.gn
+++ b/gpu/BUILD.gn
@@ -373,7 +373,7 @@ test("gpu_unittests") {
     "//base/third_party/dynamic_annotations",
     "//gpu/command_buffer/client:gles2_c_lib",
     "//gpu/command_buffer/client:gles2_implementation",
-    "//gpu/command_buffer/common:gles2_utils",
+    "//gpu/command_buffer/common:common_sources",
     "//gpu/ipc:gl_in_process_context",
     "//gpu/ipc/common:gpu_preferences_util",
     "//gpu/ipc/common:test_interfaces",
