--- a/ios/chrome/browser/ui/ntp/BUILD.gn
+++ b/ios/chrome/browser/ui/ntp/BUILD.gn
@@ -48,6 +48,7 @@ source_set("ntp_controller") {
     "new_tab_page_controller.mm",
   ]
   deps = [
+    ":modal_ntp",
     ":ntp",
     ":ntp_internal",
     "//base",
@@ -90,8 +91,6 @@ source_set("ntp_internal") {
     "incognito_view_controller.mm",
     "metrics.h",
     "metrics.mm",
-    "modal_ntp.h",
-    "modal_ntp.mm",
     "most_visited_cell.h",
     "most_visited_cell.mm",
     "most_visited_layout.h",
@@ -116,6 +115,7 @@ source_set("ntp_internal") {
     ":ntp_header",
   ]
   deps = [
+    ":modal_ntp",
     ":ntp",
     ":ntp_tile",
     "resources:bookmarks_bar_bg",
@@ -223,6 +223,20 @@ source_set("ntp_tile") {
   ]
 }
 
+# TODO(crbug.com/768817): Remove the following once new bookmarks are enabled by
+# default.
+source_set("modal_ntp") {
+  configs += [ "//build/config/compiler:enable_arc" ]
+  sources = [
+    "modal_ntp.h",
+    "modal_ntp.mm",
+  ]
+  deps = [
+    "//ios/chrome/browser/bookmarks:features",
+    "//ios/chrome/browser/ui:ui_util",
+  ]
+}
+
 source_set("unit_tests") {
   configs += [ "//build/config/compiler:enable_arc" ]
   testonly = true
@@ -236,6 +250,7 @@ source_set("unit_tests") {
     "ntp_tile_saver_unittest.mm",
   ]
   deps = [
+    ":modal_ntp",
     ":ntp",
     ":ntp_controller",
     ":ntp_internal",
