--- a/content/public/common/BUILD.gn
+++ b/content/public/common/BUILD.gn
@@ -362,6 +362,7 @@ mojom("interfaces") {
     "network_change_manager.mojom",
     "network_service.mojom",
     "network_service_test.mojom",
+    "proxy_config.mojom",
     "push_messaging_status.mojom",
     "url_loader.mojom",
     "url_loader_factory.mojom",
