--- a/content/network/BUILD.gn
+++ b/content/network/BUILD.gn
@@ -35,6 +35,8 @@ source_set("network_sources") {
   sources = [
     "cache_url_loader.cc",
     "cache_url_loader.h",
+    "controlled_proxy_config_service.cc",
+    "controlled_proxy_config_service.h",
     "cookie_manager.cc",
     "cookie_manager.h",
     "http_server_properties_pref_delegate.cc",
