--- a/chrome/common/BUILD.gn
+++ b/chrome/common/BUILD.gn
@@ -220,6 +220,7 @@ static_library("common") {
     "//chrome/common/printing:interfaces",
     "//chrome/common/profiling",
     "//chrome/installer/util:with_no_strings",
+    "//chrome/services/file_util/public/interfaces",
     "//components/cast_certificate",
     "//components/cdm/common",
     "//components/cloud_devices/common",
@@ -681,10 +682,6 @@ mojom("mojo_bindings") {
 
   if (is_win) {
     sources += [ "conflicts/module_event_sink_win.mojom" ]
-  }
-
-  if (safe_browsing_mode == 1) {
-    sources += [ "safe_browsing/safe_archive_analyzer.mojom" ]
   }
 
   public_deps = [
