--- a/chrome/utility/BUILD.gn
+++ b/chrome/utility/BUILD.gn
@@ -37,6 +37,7 @@ static_library("utility") {
     "//chrome/common/printing:interfaces",
     "//chrome/common/profiling",
     "//chrome/profiling",
+    "//chrome/services/file_util:lib",
     "//components/search_engines",
     "//components/strings",
     "//components/url_formatter",
