WebView: Refactor AwSafeBrowsingConfigHelper
Refactor AwSafeBrowsingConfigHelper into a singleton class.

BUG=682070

Change-Id: I050f0afdca45c53682319b30b92ee18c550b4f3f

--- a/android_webview/BUILD.gn
+++ b/android_webview/BUILD.gn
@@ -779,7 +779,6 @@ android_library("android_webview_java") {
     "java/src/org/chromium/android_webview/AwContentsClientBridge.java",
     "java/src/org/chromium/android_webview/AwContentsClientCallbackHelper.java",
     "java/src/org/chromium/android_webview/AwContentsIoThreadClient.java",
-    "java/src/org/chromium/android_webview/AwContentsLifecycleNotifier.java",
     "java/src/org/chromium/android_webview/AwContentsStatics.java",
     "java/src/org/chromium/android_webview/AwCookieManager.java",
     "java/src/org/chromium/android_webview/AwDebug.java",
@@ -806,7 +805,6 @@ android_library("android_webview_java") {
     "java/src/org/chromium/android_webview/AwServiceWorkerController.java",
     "java/src/org/chromium/android_webview/AwServiceWorkerSettings.java",
     "java/src/org/chromium/android_webview/AwSettings.java",
-    "java/src/org/chromium/android_webview/AwSwitches.java",
     "java/src/org/chromium/android_webview/AwTokenBindingManager.java",
     "java/src/org/chromium/android_webview/AwViewMethods.java",
     "java/src/org/chromium/android_webview/AwViewAndroidDelegate.java",
@@ -843,6 +841,7 @@ android_library("android_webview_java") {
   deps = [
     ":android_webview_commandline_java",
     ":android_webview_crash_services_java",
+    ":android_webview_interfaces_java",
     ":android_webview_platform_services_java",
     ":resources",
     ":strings_grd",
@@ -940,6 +939,17 @@ android_library("android_webview_platform_services_java") {
   java_files =
       [ "java/src/org/chromium/android_webview/PlatformServiceBridge.java" ]
 
+  deps = [
+    "//base:base_java",
+  ]
+}
+
+android_library("android_webview_interfaces_java") {
+  java_files = [
+    "java/src/org/chromium/android_webview/AwSafeBrowsingOptInPreferenceFetcher.java",
+    "java/src/org/chromium/android_webview/AwContentsLifecycleNotifier.java",
+    "java/src/org/chromium/android_webview/AwSwitches.java",
+  ]
   deps = [
     "//base:base_java",
   ]
