MD Extensions: Split the app into a basic and a lazy module, WIP.
This improves FMP performance by about 36% (~550ms -> ~350ms).

Bug:764126
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: If97526b783caa587bf13a17695eefd9bf3c62249

--- a/chrome/browser/resources/md_extensions/BUILD.gn
+++ b/chrome/browser/resources/md_extensions/BUILD.gn
@@ -7,10 +7,19 @@ unpak_folder = "extensions_resources.unpak"
 
 optimize_webui("build") {
   host = "extensions"
-  html_in_files = [ "extensions.html" ]
-  html_out_files = [ "vulcanized.html" ]
+  html_in_files = [
+    "extensions.html",
+    "lazy_load.html",
+  ]
+  html_out_files = [
+    "vulcanized.html",
+    "lazy_load.vulcanized.html",
+  ]
   input = rebase_path("$target_gen_dir/$unpak_folder", root_build_dir)
-  js_out_files = [ "crisper.js" ]
+  js_out_files = [
+    "crisper.js",
+    "lazy_load.crisper.js",
+  ]
 
   deps = [
     ":unpak",
