--- a/content/test/BUILD.gn
+++ b/content/test/BUILD.gn
@@ -1485,6 +1485,7 @@ test("content_unittests") {
     "../common/throttling_url_loader_unittest.cc",
     "../common/unique_name_helper_unittest.cc",
     "../common/webplugininfo_unittest.cc",
+    "../network/controlled_proxy_config_service_unittest.cc",
     "../network/cookie_manager_unittest.cc",
     "../network/network_change_manager_unittest.cc",
     "../network/network_context_unittest.cc",
