Move url_keyed_metrics capability from browser to an embedded service.
This removes the need for resource_coordinator service to have
SetUkmRecorder interface, and just has it bind directly.

Also introduces MojoUkmRecorder::Create to access this service, and
uses this from Document::UkmRecorder().

Bug: 733995

Change-Id: Ie8320cbd12c54af90e35ba21b8f30eb4e3ef4a0b

--- a/content/public/app/mojo/content_browser_manifest.json
+++ b/content/public/app/mojo/content_browser_manifest.json
@@ -63,7 +63,6 @@
         "*": [ "app" ],
         "cdm": [ "media:cdm" ],
         "content_browser": [
-          "url_keyed_metrics",
           "geolocation_config"
         ],
         "content_gpu": [ "browser" ],
@@ -83,6 +82,7 @@
         ],
         "file": [ "file:filesystem", "file:leveldb" ],
         "media": [ "media:media" ],
+        "metrics": [ "url_keyed_metrics" ],
         "network": [
           "network_service",
           "test",
