--- a/chrome/app/BUILD.gn
+++ b/chrome/app/BUILD.gn
@@ -387,6 +387,7 @@ static_library("test_support") {
 chrome_packaged_services = [
   ":chrome_manifest",
   "//chrome/profiling:manifest",
+  "//services/metrics:manifest",
   "//services/proxy_resolver:proxy_resolver_manifest",
   "//services/preferences:local_state_manifest",
 ]
