fuchsia arm64: fix PIC-related errors in ffmpeg .S
The ffmpeg build uses this when is_component_ffmpeg is set, but that's
not generally on for non-is_component_mode=true builds like the cast
build. Add this flag to make test .sos (libcast_saturated_gain_1.0.so
and libcast_governor_1.0.so) that reference ffmpeg link. See linked
bug for errors.

xref: https://cs.chromium.org/chromium/src/third_party/ffmpeg/BUILD.gn?q=third_party/ffmpeg/build.gn+Bsymbolic&sq=package:chromium&l=421

Bug: 782040
Change-Id: I6640899642db13759fbd427facebbc8da69b77f4

--- a/chromecast/media/cma/backend/BUILD.gn
+++ b/chromecast/media/cma/backend/BUILD.gn
@@ -189,6 +189,9 @@ cast_shared_library("libcast_governor_1.0") {
     ":governor",
     "//chromecast/public/media",
   ]
+  if (is_fuchsia) {
+    ldflags = [ "-Wl,-Bsymbolic" ]
+  }
 }
 
 cast_source_set("governor") {
@@ -213,6 +216,9 @@ cast_shared_library("libcast_saturated_gain_1.0") {
     ":saturated_gain",
     "//chromecast/public/media",
   ]
+  if (is_fuchsia) {
+    ldflags = [ "-Wl,-Bsymbolic" ]
+  }
 }
 
 cast_source_set("saturated_gain") {
