Show extension name in permission bubble.
This applies to browser permissions checks, not app permissions. For
example: getUserMedia. If the permission is not requested by an
extension, or the extension name cannot be looked up, the origin from
the URL is shown as before.

Tested by launching an extension that attempts to access the mic with
getUserMedia and verifying the existing behavior for a web site.

Bug: 717625
Change-Id: I4e17c97f932ee163afa2fe972687259d794e4cfc

--- a/chrome/browser/ui/BUILD.gn
+++ b/chrome/browser/ui/BUILD.gn
@@ -3435,6 +3435,8 @@ split_static_library("ui") {
       "extensions/extension_message_bubble_bridge.h",
       "extensions/extension_message_bubble_factory.cc",
       "extensions/extension_message_bubble_factory.h",
+      "extensions/extension_name.cc",
+      "extensions/extension_name.h",
       "extensions/hosted_app_browser_controller.cc",
       "extensions/hosted_app_browser_controller.h",
       "extensions/hosted_app_menu_model.cc",
