Pull the popup menu out of BookmarkRow
The three dot 'more' menu being shown on each bookmark row is becoming a
shared component across multiple sheets.  This CL pulls out the popup
menu button and menu logic to a separate class so it can be shared
across multiple bottom sheet content areas.

BUG=777630

Change-Id: I3d27de7eb3c3ea1cbea1c47df323c983eb9382c7

--- a/chrome/android/java_sources.gni
+++ b/chrome/android/java_sources.gni
@@ -1304,6 +1304,7 @@ chrome_java_sources = [
   "java/src/org/chromium/chrome/browser/widget/ImageViewTinter.java",
   "java/src/org/chromium/chrome/browser/widget/LoadingView.java",
   "java/src/org/chromium/chrome/browser/widget/MaterialProgressBar.java",
+  "java/src/org/chromium/chrome/browser/widget/ModernListMenuButton.java",
   "java/src/org/chromium/chrome/browser/widget/NumberRollView.java",
   "java/src/org/chromium/chrome/browser/widget/OverviewListLayout.java",
   "java/src/org/chromium/chrome/browser/widget/PaddedFrameLayout.java",
