wip: The obsolete plan of adding seat to display as observer
Change-Id: I8240670868c5dfa92deef7e01a93aab7214c01e2

--- a/components/exo/BUILD.gn
+++ b/components/exo/BUILD.gn
@@ -24,6 +24,7 @@ source_set("exo") {
     "display.h",
     "gaming_seat.cc",
     "gaming_seat.h",
+    "gaming_seat_delegate.h",
     "keyboard.cc",
     "keyboard.h",
     "keyboard_delegate.h",
