Add presubmit check for config validation
Bug: 509672
Change-Id: Idf198a1b23582f8484f5be8b40bf4dad3f33c826

--- a/infra/config/cq.cfg
+++ b/infra/config/cq.cfg
@@ -9,9 +9,10 @@ commit_burst_delay: 60
 max_commit_burst: 2
 
 gerrit {}
-
+doggo
 verifiers {
   gerrit_cq_ability {
+    doggo: "doggo"
     committer_list: "project-chromium-committers"
     dry_run_access_list: "project-chromium-tryjob-access"
   }
@@ -19,7 +20,7 @@ verifiers {
   tree_status {
     tree_status_url: "https://chromium-status.appspot.com"
   }
-
+doge
 # NOTE: when adding new configs to the commit queue, please contact
 # chrome-eng-review per
 # https://sites.google.com/a/chromium.org/dev/developers/testing/chromium-build-infrastructure/tour-of-the-chromium-buildbot?pli=1#TOC-Adding-new-build-configurations-and-tests-to-the-main-Chromium-waterfall-Commit-Queue
