Create a metrics logger as a keyed service
Rename some test cases


WIP DO NOT REVIEW DO NOT PUSH DO NOT LOOK AT THIS

Bug: 780534
Change-Id: Icde7dbf2d141359098043c6b8745d709178e4498

--- a/chrome/browser/BUILD.gn
+++ b/chrome/browser/BUILD.gn
@@ -804,6 +804,12 @@ split_static_library("browser") {
     "notifications/desktop_notification_profile_util.h",
     "notifications/message_center_display_service.cc",
     "notifications/message_center_display_service.h",
+    "notifications/metrics/notification_metrics_logger.cc",
+    "notifications/metrics/notification_metrics_logger.h",
+    "notifications/metrics/notification_metrics_logger_factory.cc",
+    "notifications/metrics/notification_metrics_logger_factory.h",
+    "notifications/metrics/notification_metrics_logger_impl.cc",
+    "notifications/metrics/notification_metrics_logger_impl.h",
     "notifications/native_notification_display_service.cc",
     "notifications/native_notification_display_service.h",
     "notifications/non_persistent_notification_handler.cc",
