--- a/chrome/test/BUILD.gn
+++ b/chrome/test/BUILD.gn
@@ -2243,6 +2243,9 @@ test("unit_tests") {
     "../browser/net/spdyproxy/data_reduction_proxy_settings_unittest_android.cc",
     "../browser/net/url_info_unittest.cc",
     "../browser/notifications/desktop_notification_profile_util_unittest.cc",
+    "../browser/notifications/metrics/mock_notification_metrics_logger.cc",
+    "../browser/notifications/metrics/mock_notification_metrics_logger.h",
+    "../browser/notifications/metrics/notification_metrics_logger_impl_unittest.cc",
     "../browser/notifications/notification_channels_provider_android_unittest.cc",
     "../browser/notifications/notification_permission_context_unittest.cc",
     "../browser/notifications/notification_platform_bridge_mac_unittest.mm",
