--- a/chrome/test/BUILD.gn
+++ b/chrome/test/BUILD.gn
@@ -467,6 +467,7 @@ test("browser_tests") {
       "../browser/data_saver/data_saver_browsertest.cc",
       "../browser/data_saver/data_saver_holdback_browsertest.cc",
       "../browser/data_saver/data_saver_webapis_browsertest.cc",
+      "../browser/device_u2f/u2f_hid_browsertest.cc",
       "../browser/devtools/device/adb/adb_client_socket_browsertest.cc",
       "../browser/devtools/device/adb/mock_adb_server.cc",
       "../browser/devtools/device/adb/mock_adb_server.h",
@@ -883,6 +884,7 @@ test("browser_tests") {
       "//crypto:test_support",
       "//device/base:mocks",
       "//device/bluetooth:mocks",
+      "//device/u2f",
       "//device/usb:test_support",
       "//google_apis:test_support",
       "//media:test_support",
