--- a/content/browser/BUILD.gn
+++ b/content/browser/BUILD.gn
@@ -149,6 +149,7 @@ source_set("browser") {
     "//storage/common",
     "//third_party/WebKit/common:blink_common",
     "//third_party/WebKit/public:blink_headers",
+    "//third_party/WebKit/public:controller_mojo_bindings",
     "//third_party/WebKit/public:core_mojo_bindings",
     "//third_party/WebKit/public:features",
     "//third_party/WebKit/public:mojo_bindings",
