--- a/chrome/browser/vr/BUILD.gn
+++ b/chrome/browser/vr/BUILD.gn
@@ -120,6 +120,8 @@ static_library("vr_common") {
     "model/omnibox_suggestions.cc",
     "model/omnibox_suggestions.h",
     "model/reticle_model.h",
+    "model/toolbar_state.cc",
+    "model/toolbar_state.h",
     "model/web_vr_timeout_state.h",
     "pose_util.cc",
     "pose_util.h",
@@ -135,8 +137,6 @@ static_library("vr_common") {
     "target_property.h",
     "toolbar_helper.cc",
     "toolbar_helper.h",
-    "toolbar_state.cc",
-    "toolbar_state.h",
     "transition.cc",
     "transition.h",
     "ui.cc",
