--- a/ash/BUILD.gn
+++ b/ash/BUILD.gn
@@ -696,6 +696,8 @@ component("ash") {
     "touch/ash_touch_transform_controller.h",
     "touch/touch_devices_controller.cc",
     "touch/touch_devices_controller.h",
+    "touch/touch_hud_controller.cc",
+    "touch/touch_hud_controller.h",
     "touch/touch_hud_debug.cc",
     "touch/touch_hud_debug.h",
     "touch/touch_hud_projection.cc",
@@ -1404,6 +1406,7 @@ test("ash_unittests") {
     "test/ash_unittests.cc",
     "tooltips/tooltip_controller_unittest.cc",
     "touch/touch_devices_controller_unittest.cc",
+    "touch/touch_hud_controller_unittest.cc",
     "touch/touch_observer_hud_unittest.cc",
     "tray_action/test_tray_action_client.cc",
     "tray_action/test_tray_action_client.h",
