[CrOS Tether] Refactor BLE advertisement generation.
Previously, advertisements were generated within BleAdvertiser. However,
this logic will need to be shared with the GATT services workaround
described in crbug.com/784968. This CL moves this code to its own class
so that the workaround can be implemented.

Bug: 784968, 672263
Change-Id: I2b6e835d4c4af9bed294eb1005091f99c2b6dc4b

--- a/chromeos/components/tether/BUILD.gn
+++ b/chromeos/components/tether/BUILD.gn
@@ -205,6 +205,7 @@ static_library("test_support") {
     "//chromeos/components/tether/proto",
     "//components/cryptauth",
     "//components/cryptauth:test_support",
+    "//components/cryptauth/ble:test_support",
     "//device/bluetooth",
     "//testing/gmock",
     "//testing/gtest",
