--- a/gpu/command_buffer/client/BUILD.gn
+++ b/gpu/command_buffer/client/BUILD.gn
@@ -46,6 +46,8 @@ source_set("client_sources") {
     "client_discardable_manager.h",
     "client_discardable_texture_manager.cc",
     "client_discardable_texture_manager.h",
+    "client_transfer_cache.cc",
+    "client_transfer_cache.h",
     "cmd_buffer_helper.cc",
     "cmd_buffer_helper.h",
     "fenced_allocator.cc",
@@ -75,6 +77,10 @@ source_set("client_sources") {
     "//ui/gfx:memory_buffer",
     "//ui/gfx/geometry",
   ]
+
+  if (!is_nacl) {
+    deps += [ "//cc/paint" ]
+  }
 }
 
 source_set("gles2_cmd_helper_sources") {
