--- a/luci-milo-dev.cfg
+++ b/luci-milo-dev.cfg
@@ -1391,7 +1391,6 @@ consoles{
   ref: "refs/heads/master"
   manifest_name: "REVISION"
   header_id: "chromium"
-  include_experimental_builds: true
 
   builders: {
     name: "buildbucket/luci.chromium.ci/Linux Builder SANDBOX"
@@ -2019,9 +2018,6 @@ consoles: {
     name: "buildbot/chromium.fyi/CrWinGoma(loc)"
   }
   builders: {
-    name: "buildbot/chromium.fyi/EarlGreyiOS"
-  }
-  builders: {
     name: "buildbot/chromium.fyi/Fuchsia"
   }
   builders: {
@@ -2128,6 +2124,9 @@ consoles: {
   }
   builders: {
     name: "buildbot/chromium.fyi/ios-simulator-cronet"
+  }
+  builders: {
+    name: "buildbot/chromium.fyi/ios-webview"
   }
 }
 
