chromeos: renames mash specific files to mash
BUG=784945
TEST=no functional changes

Change-Id: I7f00b4fbdb33201f3be2a6a7156d4c0126c84e39

--- a/ash/mus/BUILD.gn
+++ b/ash/mus/BUILD.gn
@@ -20,8 +20,8 @@ source_set("lib") {
     "accelerators/accelerator_ids.h",
     "ash_window_tree_host_mus.cc",
     "ash_window_tree_host_mus.h",
-    "bridge/immersive_handler_factory_mus.cc",
-    "bridge/immersive_handler_factory_mus.h",
+    "bridge/immersive_handler_factory_mash.cc",
+    "bridge/immersive_handler_factory_mash.h",
     "bridge/shell_port_mash.cc",
     "bridge/shell_port_mash.h",
     "bridge/workspace_event_handler_mus.cc",
@@ -36,8 +36,8 @@ source_set("lib") {
     "event_matcher_util.h",
     "frame/detached_title_area_renderer.cc",
     "frame/detached_title_area_renderer.h",
-    "keyboard_ui_mus.cc",
-    "keyboard_ui_mus.h",
+    "keyboard_ui_mash.cc",
+    "keyboard_ui_mash.h",
     "move_event_handler.cc",
     "move_event_handler.h",
     "network_connect_delegate_mus.cc",
