--- a/ui/gl/BUILD.gn
+++ b/ui/gl/BUILD.gn
@@ -173,6 +173,8 @@ component("gl") {
       "gl_context_egl.h",
       "gl_egl_api_implementation.cc",
       "gl_egl_api_implementation.h",
+      "gl_fence_android_native_fence_sync.cc",
+      "gl_fence_android_native_fence_sync.h",
       "gl_fence_egl.cc",
       "gl_fence_egl.h",
       "gl_image_egl.cc",
@@ -315,10 +317,15 @@ component("gl") {
 static_library("gl_unittest_utils") {
   testonly = true
   sources = [
+    "egl_bindings_autogen_mock.cc",
+    "egl_bindings_autogen_mock.h",
+    "egl_mock.cc",
+    "egl_mock.h",
     "gl_bindings_autogen_mock.cc",
     "gl_bindings_autogen_mock.h",
     "gl_mock.cc",
     "gl_mock.h",
+    "gl_mock_autogen_egl.h",
     "gl_mock_autogen_gl.h",
     "gpu_timing_fake.cc",
     "gpu_timing_fake.h",
