[vr] Add a shadow element
This change adds an element that manages a dynamic soft shadow. It
approximates a shadow due to an area light source. To use it, you just
set this as your ancestor element; the shadow will grow to accomodate
your size. You can then animate your descendant toward and away from
the ancestor shadow element and the shadow will grow/blur/etc in
response.

Bug:None
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: Ic7eaa044f1d327786e7dc3631f88d40e8b69625d

--- a/chrome/browser/vr/BUILD.gn
+++ b/chrome/browser/vr/BUILD.gn
@@ -67,6 +67,8 @@ static_library("vr_common") {
     "elements/render_text_wrapper.h",
     "elements/reticle.cc",
     "elements/reticle.h",
+    "elements/shadow.cc",
+    "elements/shadow.h",
     "elements/simple_textured_element.h",
     "elements/spinner.cc",
     "elements/spinner.h",
