--- a/chrome/browser/chromeos/BUILD.gn
+++ b/chrome/browser/chromeos/BUILD.gn
@@ -1076,6 +1076,8 @@ source_set("chromeos") {
     "login/ui/login_display_host_views.h",
     "login/ui/login_display_host_webui.cc",
     "login/ui/login_display_host_webui.h",
+    "login/ui/login_display_views.cc",
+    "login/ui/login_display_views.h",
     "login/ui/login_feedback.cc",
     "login/ui/login_feedback.h",
     "login/ui/login_web_dialog.cc",
