midi: Use std::deque for MidiMessageQueue
For the purposes of this class, the semantics of
circular_deque and std::deque are the same. Switching
to std::deque will make this class easier to re-use outside
of Chrome, by reducing it's dependency on src/base/containers.

BUG=chromium:701005
TEST=Pending.

Change-Id: I6db7c0b768f535750019efaae24e92c3ef30c574

--- a/media/midi/BUILD.gn
+++ b/media/midi/BUILD.gn
@@ -75,15 +75,13 @@ if (is_android) {
 
 component("midi") {
   sources = [
-    "message_util.cc",
-    "message_util.h",
-    "midi_export.h",
+    "//components/midi/message_util.h",
+    "//components/midi/midi_export.h",
+    "//components/midi/midi_message_queue.h",
     "midi_manager.cc",
     "midi_manager.h",
     "midi_manager_mac.cc",
     "midi_manager_mac.h",
-    "midi_message_queue.cc",
-    "midi_message_queue.h",
     "midi_port_info.cc",
     "midi_port_info.h",
     "midi_scheduler.cc",
@@ -102,6 +100,7 @@ component("midi") {
   deps = [
     ":mojo",
     "//base",
+    "//components/midi:midi_utils",
   ]
   libs = []
 
