--- a/ios/chrome/browser/ui/fullscreen/BUILD.gn
+++ b/ios/chrome/browser/ui/fullscreen/BUILD.gn
@@ -15,6 +15,105 @@ source_set("fullscreen") {
   ]
 }
 
+source_set("new_fullscreen") {
+  sources = [
+    "fullscreen_controller.h",
+    "fullscreen_controller_observer.h",
+    "fullscreen_ui_updater.h",
+    "scoped_fullscreen_disabler.h",
+  ]
+
+  configs += [ "//build/config/compiler:enable_arc" ]
+
+  allow_circular_includes_from = [ ":new_fullscreen_internal" ]
+
+  deps = [
+    ":new_fullscreen_internal",
+    ":new_fullscreen_ui",
+    "//base",
+    "//ios/chrome/browser/ui/browser_list",
+    "//ios/chrome/browser/web_state_list",
+  ]
+}
+
+source_set("new_fullscreen_internal") {
+  sources = [
+    "fullscreen_broadcast_forwarder.h",
+    "fullscreen_broadcast_forwarder.mm",
+    "fullscreen_broadcast_receiver.h",
+    "fullscreen_broadcast_receiver.mm",
+    "fullscreen_controller.mm",
+    "fullscreen_controller_observer_manager.h",
+    "fullscreen_controller_observer_manager.mm",
+    "fullscreen_model.h",
+    "fullscreen_model.mm",
+    "fullscreen_model_observer.h",
+    "fullscreen_scroll_end_animation_controller.h",
+    "fullscreen_scroll_end_animation_controller.mm",
+    "fullscreen_ui_updater.mm",
+    "fullscreen_web_state_list_observer.h",
+    "fullscreen_web_state_list_observer.mm",
+    "fullscreen_web_state_observer.h",
+    "fullscreen_web_state_observer.mm",
+  ]
+
+  configs += [ "//build/config/compiler:enable_arc" ]
+
+  deps = [
+    ":new_fullscreen_ui",
+    "//base",
+    "//ios/chrome/browser/ui:ui_util",
+    "//ios/chrome/browser/ui/broadcaster",
+    "//ios/chrome/browser/ui/browser_list",
+    "//ios/chrome/browser/web_state_list",
+    "//ios/web",
+  ]
+}
+
+source_set("new_fullscreen_ui") {
+  sources = [
+    "fullscreen_scroll_end_animator.h",
+    "fullscreen_scroll_end_animator.mm",
+    "fullscreen_ui_element.h",
+  ]
+
+  configs += [ "//build/config/compiler:enable_arc" ]
+
+  deps = [
+    "//base",
+    "//ios/chrome/common:timing",
+    "//ui/gfx/geometry",
+  ]
+}
+
+source_set("new_unit_tests") {
+  testonly = true
+  sources = [
+    "fullscreen_broadcast_forwarder_unittest.mm",
+    "fullscreen_controller_unittest.mm",
+    "fullscreen_model_unittest.mm",
+    "fullscreen_scroll_end_animation_controller_unittest.mm",
+    "fullscreen_ui_updater_unittest.mm",
+    "fullscreen_web_state_list_observer_unittest.mm",
+    "fullscreen_web_state_observer_unittest.mm",
+  ]
+
+  configs += [ "//build/config/compiler:enable_arc" ]
+
+  deps = [
+    ":new_fullscreen",
+    ":new_fullscreen_internal",
+    ":new_fullscreen_ui",
+    "//ios/chrome/browser/ui:ui_util",
+    "//ios/chrome/browser/ui/broadcaster",
+    "//ios/chrome/browser/ui/fullscreen/test",
+    "//ios/web",
+    "//ios/web/public",
+    "//ios/web/public/test/fakes",
+    "//testing/gtest",
+  ]
+}
+
 source_set("legacy_fullscreen") {
   sources = [
     "legacy_fullscreen_controller.h",
