--- a/ios/chrome/browser/ui/fullscreen/BUILD.gn
+++ b/ios/chrome/browser/ui/fullscreen/BUILD.gn
@@ -15,6 +15,46 @@ source_set("fullscreen") {
   ]
 }
 
+source_set("new_fullscreen_internal") {
+  sources = [
+    "fullscreen_broadcast_forwarder.h",
+    "fullscreen_broadcast_forwarder.mm",
+    "fullscreen_broadcast_receiver.h",
+    "fullscreen_broadcast_receiver.mm",
+  ]
+
+  configs += [ "//build/config/compiler:enable_arc" ]
+
+  deps = [
+    "//base",
+    "//ios/chrome/browser/ui:ui_util",
+    "//ios/chrome/browser/ui/broadcaster",
+    "//ios/chrome/browser/ui/browser_list",
+    "//ios/chrome/browser/web_state_list",
+    "//ios/web",
+  ]
+}
+
+source_set("new_unit_tests") {
+  testonly = true
+  sources = [
+    "fullscreen_broadcast_forwarder_unittest.mm",
+  ]
+
+  configs += [ "//build/config/compiler:enable_arc" ]
+
+  deps = [
+    ":new_fullscreen_internal",
+    "//ios/chrome/browser/ui:ui_util",
+    "//ios/chrome/browser/ui/broadcaster",
+    "//ios/chrome/browser/ui/fullscreen/test",
+    "//ios/web",
+    "//ios/web/public",
+    "//ios/web/public/test/fakes",
+    "//testing/gtest",
+  ]
+}
+
 source_set("legacy_fullscreen") {
   sources = [
     "legacy_fullscreen_controller.h",
