[iOS] Added FullscreenBroadcastForwarder.
This object takes broacasted fullscreen state and forwards it to a
reciever.  FullscreenModelBroadcastReceiver can be used to forward this
UI state to a FullscreenModel.

Bug: 785663
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: Id7891d55f92e31e9e45e8787081941c7facd4a4b

--- a/ios/chrome/browser/ui/fullscreen/BUILD.gn
+++ b/ios/chrome/browser/ui/fullscreen/BUILD.gn
@@ -38,6 +38,10 @@ source_set("new_fullscreen") {
 
 source_set("new_fullscreen_internal") {
   sources = [
+    "fullscreen_broadcast_forwarder.h",
+    "fullscreen_broadcast_forwarder.mm",
+    "fullscreen_broadcast_receiver.h",
+    "fullscreen_broadcast_receiver.mm",
     "fullscreen_controller.mm",
     "fullscreen_ui_updater.mm",
   ]
@@ -74,6 +78,7 @@ source_set("new_fullscreen_ui") {
 source_set("new_unit_tests") {
   testonly = true
   sources = [
+    "fullscreen_broadcast_forwarder_unittest.mm",
     "fullscreen_ui_updater_unittest.mm",
   ]
 
@@ -85,6 +90,7 @@ source_set("new_unit_tests") {
     ":new_fullscreen_ui",
     "//ios/chrome/browser/ui:ui_util",
     "//ios/chrome/browser/ui/broadcaster",
+    "//ios/chrome/browser/ui/fullscreen/test",
     "//ios/web",
     "//ios/web/public",
     "//ios/web/public/test/fakes",
