--- a/media/midi/BUILD.gn
+++ b/media/midi/BUILD.gn
@@ -75,15 +75,10 @@ if (is_android) {
 
 component("midi") {
   sources = [
-    "message_util.cc",
-    "message_util.h",
-    "midi_export.h",
     "midi_manager.cc",
     "midi_manager.h",
     "midi_manager_mac.cc",
     "midi_manager_mac.h",
-    "midi_message_queue.cc",
-    "midi_message_queue.h",
     "midi_port_info.cc",
     "midi_port_info.h",
     "midi_scheduler.cc",
@@ -102,6 +97,7 @@ component("midi") {
   deps = [
     ":mojo",
     "//base",
+    "//components/midi:midi_utils",
   ]
   libs = []
 
