--- a/media/gpu/BUILD.gn
+++ b/media/gpu/BUILD.gn
@@ -400,6 +400,12 @@ component("gpu") {
         "windows/d3d11_video_decoder_impl.h",
       ]
     }
+    if (enable_library_cdms) {
+      sources += [
+        "intel_csme_cdm_proxy.cc",
+        "intel_csme_cdm_proxy.h",
+      ]
+    }
   }
 }
 
@@ -598,5 +604,13 @@ source_set("unit_tests") {
       "//ui/gfx:test_support",
       "//ui/gfx/geometry",
     ]
+  }
+  if (is_win && enable_library_cdms) {
+    sources += [
+      "d3d11_mocks.cc",
+      "d3d11_mocks.h",
+      "intel_csme_cdm_proxy_unittest.cc",
+    ]
+    libs = [ "dxguid.lib" ]
   }
 }
