--- a/gpu/BUILD.gn
+++ b/gpu/BUILD.gn
@@ -355,7 +355,9 @@ test("gpu_unittests") {
   }
 
   if (is_android) {
-    sources += [ "ipc/client/gpu_memory_buffer_impl_android_hardware_buffer_unittest.cc" ]
+    sources += [
+      "ipc/client/gpu_memory_buffer_impl_android_hardware_buffer_unittest.cc",
+    ]
   }
 
   # TODO(geofflang): Run passthrough command decoder unittests on more platforms
