--- a/chrome/android/BUILD.gn
+++ b/chrome/android/BUILD.gn
@@ -744,7 +744,9 @@ template("chrome_shared_library") {
     if (enable_vr) {
       # Ensure libgvr static library appears before gcc library in linking order.
       # See https://crbug.com/704305 for details.
-      libs = [ "//third_party/gvr-android-sdk/libgvr_shim_static_${current_cpu}.a" ]
+      libs = [
+        "//third_party/gvr-android-sdk/libgvr_shim_static_${current_cpu}.a",
+      ]
     }
 
     if (use_order_profiling) {
@@ -960,7 +962,9 @@ if (!android_64bit_target_cpu ||
     if (enable_vr) {
       # Ensure libgvr static library appears before gcc library in linking order.
       # See https://crbug.com/704305 for details.
-      libs = [ "//third_party/gvr-android-sdk/libgvr_shim_static_${current_cpu}.a" ]
+      libs = [
+        "//third_party/gvr-android-sdk/libgvr_shim_static_${current_cpu}.a",
+      ]
     }
 
     configs -= [ "//build/config/android:hide_all_but_jni_onload" ]
