--- a/chromecast/media/cma/backend/android/BUILD.gn
+++ b/chromecast/media/cma/backend/android/BUILD.gn
@@ -45,7 +45,9 @@ generate_jni("audio_track_jni_headers") {
   ]
 
   if (enable_volume_tables_access) {
-    sources += [ "java/src/org/chromium/chromecast/cma/backend/android/VolumeMap.java" ]
+    sources += [
+      "java/src/org/chromium/chromecast/cma/backend/android/VolumeMap.java",
+    ]
   }
 
   jni_package = "audio_track"
@@ -58,7 +60,9 @@ android_library("audio_track_java") {
   ]
 
   if (enable_volume_tables_access) {
-    java_files += [ "java/src/org/chromium/chromecast/cma/backend/android/VolumeMap.java" ]
+    java_files += [
+      "java/src/org/chromium/chromecast/cma/backend/android/VolumeMap.java",
+    ]
   }
 
   deps = [
