--- a/content/shell/BUILD.gn
+++ b/content/shell/BUILD.gn
@@ -742,7 +742,9 @@ if (is_mac) {
     # use rpath-based loading.
     # TODO(rsesek): After GYP is gone, re-write content_shell_main to be like
     # chrome_main and use dlopen() instead of a linked framework.
-    ldflags = [ "-Wl,-install_name,@rpath/Frameworks/$output_name.framework/$output_name" ]
+    ldflags = [
+      "-Wl,-install_name,@rpath/Frameworks/$output_name.framework/$output_name",
+    ]
 
     if (is_component_build) {
       # Set up the rpath for the framework so that it can find dylibs in the
