--- a/remoting/codec/BUILD.gn
+++ b/remoting/codec/BUILD.gn
@@ -42,9 +42,7 @@ source_set("encoder") {
   # Currently, building WebrtcVideoEncoderGpu is only supported on Windows and
   # Linux, and encoding with WebrtcVideoEncoderGpu is only supported on Windows.
   if (is_win || is_linux) {
-    public_configs = [
-      "//skia:skia_config",
-    ]
+    public_configs = [ "//skia:skia_config" ]
     sources += [
       "webrtc_video_encoder_gpu.cc",
       "webrtc_video_encoder_gpu.h",
