--- a/services/viz/privileged/interfaces/compositing/typemaps.gni
+++ b/services/viz/privileged/interfaces/compositing/typemaps.gni
@@ -2,4 +2,6 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
-typemaps = [ "//services/viz/privileged/interfaces/compositing/renderer_settings.typemap" ]
+typemaps = [
+  "//services/viz/privileged/interfaces/compositing/renderer_settings.typemap",
+]
