--- a/ui/resources/BUILD.gn
+++ b/ui/resources/BUILD.gn
@@ -212,7 +212,9 @@ repack("repack_ui_test_pak_100_percent") {
 
   if (use_aura && toolkit_views) {
     deps += [ "//ui/app_list/resources" ]
-    sources += [ "$root_gen_dir/ui/app_list/resources/app_list_resources_100_percent.pak" ]
+    sources += [
+      "$root_gen_dir/ui/app_list/resources/app_list_resources_100_percent.pak",
+    ]
   }
 }
 
