Add new bucket for Findit.
This bucket is meant to be used by findit to trigger tryjobs on a
segregated swarming pool, with higher permissions (e.g.src-internal
read permissions)

R=tandrii,vadimsh,stgao
BUG=789690

No-Try: True
Change-Id: I8725bb04bdc2809d3e94ac260b9c991878eb876b

--- a/cr-buildbucket.cfg
+++ b/cr-buildbucket.cfg
@@ -204,6 +204,50 @@ builder_mixins {
 }
 
 buckets {
+  name: "luci.chromium.findit"
+  acls {
+    role: SCHEDULER
+    group: "findit-tryjob-access"
+  }
+  acls {
+    role: READER
+    group: "googlers"
+  }
+
+  swarming {
+    builder_defaults {
+      category: "Chromium Variable"
+      dimensions: "pool:luci.chromium.findit"
+      service_account: "findit-builder@chops-service-accounts.iam.gserviceaccount.com"
+      execution_timeout_secs: 10800  # 3h
+      build_numbers: true
+      caches {
+        path: "win_toolchain"
+        name: "win_toolchain"
+      }
+      # Findit app specifies these for each build it schedules. The reason why
+      # we specify them here is to pass validation of the buildbucket config.
+      # Also, to illustrate the typical use case of this bucket.
+      recipe {
+        repository: "https://chromium.googlesource.com/chromium/tools/build.git"
+        name: "findit/chromium/compile"
+        properties_j: "$kitchen:{\"git_auth\": true, \"devshell\": true}"
+      }
+    }
+
+    # Dimensionless trybot for findit.
+    #
+    # Findit will add appropriate dimensions and properties as needed based on
+    # the waterfall builder being analyzed.
+    #
+    # TODO(robertocn): Remove _variable trybot builders from luci.chromium.try
+    #   after they have been configured to use this generic builder, as well as
+    #   the findit 'mixin'.
+    builders { name: "findit_variable" }
+  }
+}
+
+buckets {
   name: "luci.chromium.try"
 
   # NOTE: these ACLs should be kept in sync with those in the other
@@ -230,16 +274,6 @@ buckets {
         properties_j: "$kitchen:{\"git_auth\": true, \"devshell\": true}"
       }
     }
-
-    # Dimensionless trybot for findit.
-    #
-    # Findit will add appropriate dimensions and properties as needed based on
-    # the waterfall builder being analyzed.
-    #
-    # TODO(robertocn): Remove other _variable trybot builders from this bucket
-    #   after they have been configured to use this generic builder, as well as
-    #   the findit 'mixin'.
-    builders { name: "findit_variable" }
 
     # Keep builders sorted by OS, then name.
     builders { mixins: "linux-try" name: "cast_shell_audio_linux" }
