Separate tab icon and throbber into a separate view.
This class handles the favicon, loading throbber, attention indicator,
and sad tab animations. The separation makes the Tab class cleaner and
allows this complex view to be re-used in the experimental tab class
in the future.

The network state enum was moved out from TabRendererData into its
own class. It was updated to an enum class with new-style naming.

Throbber stepping was moved to be entirely within the tab strip rather
than round-tripping through the TabStripController.

Change-Id: I063c0540e423ebbba3798a546ef58ef7616d629a

--- a/chrome/browser/ui/BUILD.gn
+++ b/chrome/browser/ui/BUILD.gn
@@ -907,6 +907,8 @@ split_static_library("ui") {
       "tabs/tab_metrics_logger.h",
       "tabs/tab_metrics_logger_impl.cc",
       "tabs/tab_metrics_logger_impl.h",
+      "tabs/tab_network_state.cc",
+      "tabs/tab_network_state.h",
       "tabs/tab_strip_model.cc",
       "tabs/tab_strip_model.h",
       "tabs/tab_strip_model_delegate.h",
@@ -3079,6 +3081,8 @@ split_static_library("ui") {
         "views/tabs/tab_controller.h",
         "views/tabs/tab_drag_controller.cc",
         "views/tabs/tab_drag_controller.h",
+        "views/tabs/tab_icon.cc",
+        "views/tabs/tab_icon.h",
         "views/tabs/tab_strip.cc",
         "views/tabs/tab_strip.h",
         "views/tabs/tab_strip_controller.h",
