--- a/chrome/utility/BUILD.gn
+++ b/chrome/utility/BUILD.gn
@@ -203,6 +203,14 @@ static_library("utility") {
   }
 
   if (enable_basic_printing || enable_print_preview) {
+    if (is_win) {
+      sources += [
+        "printing/pdf_to_emf_converter_factory_impl.cc",
+        "printing/pdf_to_emf_converter_factory_impl.h",
+        "printing/pdf_to_emf_converter_impl.cc",
+        "printing/pdf_to_emf_converter_impl.h",
+      ]
+    }
     deps += [
       "//components/printing/service/public/cpp:factory",
       "//components/printing/service/public/interfaces",
