--- a/chrome/android/java_sources.gni
+++ b/chrome/android/java_sources.gni
@@ -957,6 +957,7 @@ chrome_java_sources = [
   "java/src/org/chromium/chrome/browser/preferences/datareduction/DataReductionProxyUma.java",
   "java/src/org/chromium/chrome/browser/preferences/datareduction/DataReductionStatsPreference.java",
   "java/src/org/chromium/chrome/browser/preferences/datareduction/DataReductionDataUseItem.java",
+  "java/src/org/chromium/chrome/browser/preferences/datareduction/DataReductionUtils.java",
   "java/src/org/chromium/chrome/browser/preferences/languages/LanguagesPreferences.java",
   "java/src/org/chromium/chrome/browser/preferences/password/PasswordEntryEditor.java",
   "java/src/org/chromium/chrome/browser/preferences/password/SavePasswordsPreferences.java",
