Implement mojo transport for GpuFenceHandle
Adds a mojo transport for GpuFenceHandle objects as an alternative to the
previously implemented traditional IPC params_traits_macros support.

An example yse case is passing a GpuFenceHandle to a Renderer process to
synchronize its command buffer GL operations with an external GL context.

BUG=761432

Change-Id: I178cf670da0b0052df32f5fcaf9cac2240979deb

--- a/ui/gfx/mojo/BUILD.gn
+++ b/ui/gfx/mojo/BUILD.gn
@@ -9,6 +9,7 @@ mojom("mojo") {
     "accelerated_widget.mojom",
     "buffer_types.mojom",
     "color_space.mojom",
+    "gpu_fence_handle.mojom",
     "icc_profile.mojom",
     "overlay_transform.mojom",
     "selection_bound.mojom",
