--- a/ui/gfx/typemaps.gni
+++ b/ui/gfx/typemaps.gni
@@ -8,6 +8,7 @@ typemaps = [
   "//ui/gfx/mojo/accelerated_widget.typemap",
   "//ui/gfx/mojo/buffer_types.typemap",
   "//ui/gfx/mojo/color_space.typemap",
+  "//ui/gfx/mojo/gpu_fence_handle.typemap",
   "//ui/gfx/mojo/icc_profile.typemap",
   "//ui/gfx/mojo/overlay_transform.typemap",
   "//ui/gfx/mojo/selection_bound.typemap",
