[PassKit refactoring] 2/4 DownloadService.
This is the second refactoring CL for PassKit implementation based on
ios/web API. This CL creates Download Keyed Service and a factory.

Design doc: https://goto.google.com/ios-chrome-passkit
Bug: 787943
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: Ifa9618c3018bc9717b7d80e3a17984c7558d9f14

--- a/ios/chrome/browser/download/BUILD.gn
+++ b/ios/chrome/browser/download/BUILD.gn
@@ -4,6 +4,10 @@
 
 source_set("download") {
   sources = [
+    "browser_download_service.h",
+    "browser_download_service.mm",
+    "browser_download_service_factory.h",
+    "browser_download_service_factory.mm",
     "pass_kit_tab_helper.h",
     "pass_kit_tab_helper.mm",
     "pass_kit_tab_helper_delegate.h",
@@ -11,6 +15,8 @@ source_set("download") {
 
   deps = [
     "//base",
+    "//components/keyed_service/core",
+    "//components/keyed_service/ios",
     "//ios/web/public",
     "//ios/web/public/download",
   ]
